2011-09-01  Stefano Lattarini  <stefano.lattarini@gmail.com>

	docs: report few more automake parsing limitations
	Partly motivated by automake bug#8360.
	* doc/automake.texi (General Operation): Report few more automake
	limitations w.r.t. parsing of unusual makefile constructs.  Related
	minor reorderings.
	* tests/doc-parsing-buglets-colneq-subst.test: New test.
	* tests/doc-parsing-buglets-tabs.test: Likewise.
	* tests/Makefile.am (TESTS): Update.

2011-08-25  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: list "forgotten" test script in TESTS
	* tests/Makefile.am (TESTS): Also list ...
	* tests/java-empty-classpath.test: ... this test.  Since we are
	at it, remove trailing whitespace from a couple of lines.

2011-08-25  Eric Blake  <eblake@redhat.com>

	ylwrap: fix unusual indentation whitespace
	* lib/ylwrap: Convert tabs to spaces.
	Reported by Karl Berry.

2011-08-17  Stefano Lattarini  <stefano.lattarini@gmail.com>

	* THANKS (Daniel Richard G.): Update e-mail address.

2011-08-16  Daniel Richard G. <skunk@iskunk.org>  (tiny change)
	    Stefano Lattarini  <stefano.lattarini@gmail.com>

	java: avoid compilation errors when CLASSPATH is empty
	* lib/am/java.am (CLASSPATH_ENV): When redefining `$CLASSPATH',
	do not append an empty component in case the previous value of
	CLASSPATH is empty or unset.
	* tests/java-empty-classpath.test: New test.
	* tests/Makefile.am (TESTS): Update.
	Fixes automake bug#9306.

2011-08-16  Stefano Lattarini  <stefano.lattarini@gmail.com>

	parallel-tests: no more spurious successes for FreeBSD make
	Work around a bug of FreeBSD make bug that was causing the
	automake-generated "check" target to complete with success
	even if some tests failed; this happened only when FreeBSD
	make was run in concurrent mode (as in, e.g., "make -j2
	check").  The bug is not present in NetBSD make.
	This change fixes automake bug#9245:
	 <http://debbugs.gnu.org/cgi/bugreport.cgi?bug=9245>
	See also FreeBSD PR bin/159730: