@@ -365,6 +365,7 @@ William S Fulton	wsf@fultondesigns.co.uk
 Yann Droneaud		ydroneaud@meuh.eu.org
 Younes Younes		younes@cs.tu-berlin.de
 Zack Weinberg		zack@codesourcery.com
+Zbigniew Jędrzejewski-Szmek zbyszek@in.waw.pl
 Zoltan Rado		z.rado@chello.hu
 
 ;; Local Variables:
