@@ -1,3 +1,12 @@
+2011-09-02 Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	coverage: vala support failing for VPATH from-scratch builds
+	* tests/vala-vpath.test: New test, xfailing.
+	* tests/Makefile.am (TESTS): Update.
+	* THANKS: Update.
+	From a report by Zbigniew Jędrzejewski-Szmek.
+	Related to automake bug#8753.
+
 2011-09-01  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	docs: report few more automake parsing limitations
